// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Component should render correctly when tenant select is open 1`] = `
<Toolbar
  style={
    Object {
      "backgroundColor": "#0000",
    }
  }
>
  <ForwardRef>
    <ToolbarItem>
      <Dropdown
        dropdownItems={
          Array [
            <DropdownItem
              data-tenantid={1}
            >
              Tenant 1
            </DropdownItem>,
            <DropdownItem
              data-tenantid={2}
            >
              Tenant 2
            </DropdownItem>,
          ]
        }
        isOpen={true}
        isPlain={true}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            Tenant 2
          </DropdownToggle>
        }
      />
    </ToolbarItem>
  </ForwardRef>
  <ForwardRef>
    <ToolbarItem>
      <Button
        aria-label="Notifications"
        variant="plain"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem>
      <Button
        aria-label="Settings"
        data-cy="settings"
        onClick={[Function]}
        variant="plain"
      >
        <CogIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem>
      <a
        aria-label="REST Reference"
        href="backend/swagger-ui.html"
      >
        <Button
          variant="plain"
        >
          <BookIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Button>
      </a>
    </ToolbarItem>
  </ForwardRef>
</Toolbar>
`;

exports[`Toolbar Component should render correctly with a few tenants 1`] = `
<Toolbar
  style={
    Object {
      "backgroundColor": "#0000",
    }
  }
>
  <ForwardRef>
    <ToolbarItem>
      <Dropdown
        dropdownItems={
          Array [
            <DropdownItem
              data-tenantid={1}
            >
              Tenant 1
            </DropdownItem>,
            <DropdownItem
              data-tenantid={2}
            >
              Tenant 2
            </DropdownItem>,
          ]
        }
        isOpen={false}
        isPlain={true}
        onSelect={[Function]}
        position="right"
        toggle={
          <DropdownToggle
            onToggle={[Function]}
          >
            Tenant 2
          </DropdownToggle>
        }
      />
    </ToolbarItem>
  </ForwardRef>
  <ForwardRef>
    <ToolbarItem>
      <Button
        aria-label="Notifications"
        variant="plain"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem>
      <Button
        aria-label="Settings"
        data-cy="settings"
        onClick={[Function]}
        variant="plain"
      >
        <CogIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem>
      <a
        aria-label="REST Reference"
        href="backend/swagger-ui.html"
      >
        <Button
          variant="plain"
        >
          <BookIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Button>
      </a>
    </ToolbarItem>
  </ForwardRef>
</Toolbar>
`;

exports[`Toolbar Component should render correctly with no tenants 1`] = `
<Toolbar
  style={
    Object {
      "backgroundColor": "#0000",
    }
  }
>
  <ForwardRef />
  <ForwardRef>
    <ToolbarItem>
      <Button
        aria-label="Notifications"
        variant="plain"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem>
      <Button
        aria-label="Settings"
        data-cy="settings"
        onClick={[Function]}
        variant="plain"
      >
        <CogIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </ToolbarItem>
    <ToolbarItem>
      <a
        aria-label="REST Reference"
        href="backend/swagger-ui.html"
      >
        <Button
          variant="plain"
        >
          <BookIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Button>
      </a>
    </ToolbarItem>
  </ForwardRef>
</Toolbar>
`;
